--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ SZIGORÚ TECHNIKAI SZABÁLYOK:
 1. A HTML struktúrát NE módosítsd. Minden <div>, class, id maradjon változatlan.
 2. Csak a címkék közötti tartalmat (innerText) és a képek 'alt' attribútumát fordítsd.
 3. NE használj Markdown kódblokkokat (pl. \`\`\`html) a válaszban, csak a nyers HTML szöveget küldd vissza.
+4. Ha a cseh szöveg végén szerepel a bazár szó egy hivatkozás kíséretében, azt a magyar szövegben Outlet-nek fordítsd.
 
 SEO ÉS KULCSSZÓ STRATÉGIA (ARÁNYOSÍTÁS):
 A kulcsszavakat **a volumennel arányosan** építsd be:
